test/expected/explain_rtpf_v.out
explain void (*restrict p)()
             ^
14: error: pointer to function can not be "restrict"
